Fix index padding on mobile

--- a/css/default.css
+++ b/css/default.css
@@ -286,13 +286,11 @@ ol {
 #posts {
   overflow: hidden;
   margin: 20px;
-  padding: 20px;
 }
 
 @media (min-width: 600px) {
   #posts {
     margin-top: 57px;
-    padding: 0;
   }
 }
 
